--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,13 @@
     "@tailwindcss/vite": "^4.0.12",
     "axios": "^1.8.2",
     "framer-motion": "^12.4.11",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.479.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.3.0",
     "tailwindcss": "^4.0.12"
   },
