--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.3.0",
+    "styled-components": "^6.1.15",
     "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
