--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,15 +1,12 @@
 {
-    "builds": [
-      {
-        "src": "package.json",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/index.html"
-      }
-    ]
-  }
-  
+  "routes": [
+    {
+      "src": "/",
+      "dest": "/"
+    },
+    {
+      "src": "/destinations",
+      "dest": "/"
+    }
+  ]
+}
