--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.14",
     "@tanstack/react-query": "^5.69.0",
     "axios": "^1.8.2",
+    "formik": "^2.4.6",
     "framer-motion": "^12.4.11",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.479.0",
@@ -23,7 +24,8 @@
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.3.0",
     "styled-components": "^6.1.15",
-    "tailwindcss": "^4.0.14"
+    "tailwindcss": "^4.0.14",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
