--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.3.0",
+    "react-toastify": "^11.0.5",
     "styled-components": "^6.1.15",
     "tailwindcss": "^4.0.14",
     "yup": "^1.6.1"
